--- a/one/01.vue.html
+++ b/one/01.vue.html
@@ -27,6 +27,22 @@
         <div>{{msg2}}</div>
         <div v-text="msg2"></div>
         <div v-html="msg2"></div>
+
+        <div :title="msg3">
+            鼠标悬停几秒钟查看此处动态绑定的提示信息！
+        </div>
+
+        <!-- v-bind 是vue提供的用于绑定属性的指令 -->
+        <input type="button" value="按钮" v-bind:title="mytitle"/>
+        <input type="button" value="按钮" v-bind:title="mytitle + '可以使用变量形式添加表达式'"/>
+        <!-- v-bind 的简写方式 -->
+        <input type="button" value="按钮" :title="mytitle + '可以使用变量形式添加表达式'"/>
+
+        <!-- v-on 事件绑定机制 -->
+        <input type="button" value="按钮" :title="mytitle" v-on:click="show"/>
+        <input type="button" value="按钮" :title="mytitle" @mouseover="show"/>
+
+        <p v-if="seen">是否显示</p>
     </div>
 
     <script>
@@ -38,7 +54,16 @@
             // data属性中存放的是el属性中要用到的数据
             data: {
                 msg: '欢迎vue',
-                msg2: '<h1>解析HTML标签</h1>'
+                msg2: '<h1>解析HTML标签</h1>',
+                msg3: '页面加载于 '+ new Date().toLocaleString(),
+                mytitle: '自定义的title',
+                seen: true
+            },
+            // methods属性中定义了当前vue实例所有可用的方法
+            methods: {
+                show:function(){
+                    alert("hello")
+                }
             }
         })
     </script>
