提交新学习内容

--- a/two/列表.html
+++ b/two/列表.html
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-        <div>
-            <ul>
-                <li v-for="item, index in items" :key="index">
-                    {{index}} {{ item.msg }}
-                </li>
-            </ul>
-        </div>
-
+      <div>
         <ul>
-            <li v-for="value,key,index in object" :key="key">
-                {{ index }}-{{ key }}-{{ value }}
-            </li>
+          <li v-for="item, index in items" :key="index">
+            {{ index }} {{ item.msg }}
+          </li>
         </ul>
+      </div>
+
+      <ul>
+        <li
+          v-for="value,key,index in object"
+          :key="key"
+          @click="click1(value)"
+          :class="value"
+        >
+          {{ index }}-{{ key }}-{{ value }}
+        </li>
+      </ul>
     </div>
 
     <script>
-        var vm =new Vue({
-            el : '#app',
-            data : {
-                items : [
-                    {msg : 1},
-                    {msg : 'bb'},
-                    {msg : 'cc'}
-                ],
-                object : {
-                    title : 'this',
-                    author : 'is',
-                    content : 'content'
-                }
-            },
-                methods: {
-                    click1: function(){
-                        
-                    }
-                }
-        })
+      var vm = new Vue({
+        el: '#app',
+        data: {
+          items: [{ msg: 1 }, { msg: 'bb' }, { msg: 'cc' }],
+          object: {
+            title: 'this',
+            author: 'is',
+            content: 'content'
+          },
+          isRed: true
+        },
+        methods: {
+          click1: function(value) {
+            console.log(this.object.value)
+            this.object.value = 'aaa'
+          }
+        }
+      })
     </script>
-    
-</body>
+
+    <style>
+      .red {
+        color: red;
+      }
+    </style>
+  </body>
 </html>
