--- a/two/绑定样式.html
+++ b/two/绑定样式.html
@@ -1,40 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-
+  </head>
+  <body>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-</head>
-<body>
     <div id="app">
-        <div class="test base" :class="{ active : isActive, green : isGreen }">
-            hi vue
-        </div>
-        <div :style="{color : color, fontSize : size}">
-            hi vue
-        </div>
+      <div class="test base" :class="{ active : isActive, green : isGreen }">
+        hi vue
+      </div>
+      <div class="test base" :class="getclasses()">
+        hi vue
+      </div>
+      <button @click="btnclick">点击变色</button>
+      <div :style="{color : color, fontSize : size}">
+        hi vue
+      </div>
     </div>
 
     <script>
-        var vm =new Vue({
-            el : '#app',
-            data : {
-                isActive : true,
-                isGreen: true,
-                color: 'red',
-                size: '50px'
-            }
-        })
+      var vm = new Vue({
+        el: '#app',
+        data: {
+          isActive: true,
+          isGreen: true,
+          color: 'red',
+          size: '50px'
+        },
+        methods: {
+          btnclick: function() {
+            this.isActive = !this.isActive
+          },
+          getclasses: function() {
+            return { active: this.isActive, green: this.isGreen }
+          }
+        }
+      })
     </script>
 
     <style>
-        .base{width: 200px; height: 200px; text-align: center; line-height: 200px;}
-        .test{font-size: 30px;}
-        .active{background-color: rgb(247, 96, 96);}
-        .green{color: green;}
+      .base {
+        width: 200px;
+        height: 200px;
+        text-align: center;
+        line-height: 200px;
+      }
+      .test {
+        font-size: 30px;
+      }
+      .active {
+        background-color: rgb(247, 96, 96);
+      }
+      .green {
+        color: green;
+      }
     </style>
-</body>
+  </body>
 </html>
