使用webpack和vue-loader需要注意版本

--- a/bilibili/webpack学习/04-配置Vue/index.html
+++ b/bilibili/webpack学习/04-配置Vue/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <div id="app">
-      <h2>{{ msg }}</h2>
+      <!-- <h2>{{ msg }}</h2> -->
     </div>
 
-    <script src="./dist/bundle.js"></script>
+    <!-- 打包时会自动插入 -->
+    <!-- <script src="./dist/bundle.js"></script> -->
   </body>
 </html>
